# azure-function-app-boilerplate

./: .gitignore  LICENSE  MULTI_APP_DEPLOYMENT.md  README.md  azd-template.json  azure.yaml  deploy.sh  howto.md  rename-integration.sh
.azd/: config.json
.github/workflows/: backend-integration-azure-bicep-validate.yml  backend-integration-azure-deploy.yaml  backend-integration-azure-deploy.yml  backend-integration-azure_bicep_validate.yml  backend-integration-azure_deploy.yml  backend-integration-code_validation_and_docs.yml  lib-azure-bicep-validation.yml  lib-azure-deploy.yml  lib-azure_bicep_validation.yml  lib-azure_deploy.yml  lib-backend_code_validation_and_docs.yml
backend-integration/: .funcignore  .pre-commit-config.yaml  .secrets.baseline  README.md  azure.yaml  config.sh.example  function_app.py  generate_openapi_docs.py  local.settings.json.example  pyproject.toml  requirements.txt
backend-integration/base_models/: service_status.py
backend-integration/infra/: README.md  main.bicep  main.parameters.json
backend-integration/shopify/: __init__.py  client.py  config.py
backend-integration/tests/: conftest.py  test_health.py
backend-integration/utils/: __init__.py  config.py
backend-integration/webapp/: main.py
backend-integration/webapp/templates/: health_status.html
